<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:context=".ui.main.MainActivity">

            <android.support.design.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/main_connected_card"
                    app:strokeColor="@color/disconnected"
                    app:strokeWidth="2dp"
                    style="@style/CardRoot">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CardConnectedMessage"
                        android:text="@string/not_connected"
                        android:id="@+id/main_connected"/>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardRoot">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CardContent">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/server"
                            style="@style/CardTitle"/>


                    <EditText
                            android:id="@+id/main_input_server"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/server_hint"/>

                    <android.support.design.button.MaterialButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/main_connect"
                            style="@style/CardAction"
                            app:backgroundTint="@color/connected"
                            android:text="@string/connect"/>

                </LinearLayout>

            </android.support.design.card.MaterialCardView>

            <android.support.design.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/CardRoot">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CardContent">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/parameters"
                            style="@style/CardTitle"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/main_time_title"
                            style="@style/CardSubtitle"/>

                    <SeekBar
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/main_time"
                            android:max="55"/>

                </LinearLayout>

            </android.support.design.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

    <android.support.design.bottomappbar.BottomAppBar
            android:id="@+id/bottom_appbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_gravity="bottom"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:backgroundTint="@color/colorPrimary"
            app:fabCradleVerticalOffset="12dp"/>


    <android.support.design.widget.FloatingActionButton
            android:id="@+id/main_publish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal"
            app:srcCompat="@drawable/ic_send_white_24dp"
            app:layout_anchor="@+id/bottom_appbar"/>

</android.support.design.widget.CoordinatorLayout>
